--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
+
 <!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Torrent to magnet link</title>
-        <meta name="description" content="Конвертер torrent файлов в magnet ссылки">
-        <meta name="keywords" content="Torrent, magnet, magnet link, torrent to magnet, торрент, magnet ссылка">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Simple online converter torrent file to magnet link">
+    <meta name="author" content="Sergey Kuvakin (lafin)">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+    <title>Online converter torrent to magnet link</title>
 
-        <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
-        <![endif]-->
-    </head>
-    <body>
+    <!-- Bootstrap core CSS -->
+    <link href="http://yastatic.net/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
-        <h1>Torrent to magnet link</h1>
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
 
-        Select torrent: <input type="file" /><br /><br />
-        Magnet link: <input type="text" id="magnet" style="width: 50%;"/>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-        <script src="http://yastatic.net/jquery/2.1.1/jquery.min.js"></script>
-        <script src="js/digest.js"></script>
-        <script src="js/encoding-indexes.js"></script>
-        <script src="js/encoding.js"></script>
-        <script src="js/bencode.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+  <body>
+
+    <div class="container">
+      <div class="header">
+        <h3 class="text-muted">Torrent to magnet link</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1>Torrent2Magnet</h1>
+        <p class="lead">Just select torrent file and you see magnet link in input field.</p>
+        <input class="hide" type="file" id="upload" />
+        <p><input class="btn btn-lg btn-success" type="button" value="Select torrent" onclick="document.getElementById('upload').click();" /></p>
+      </div>
+
+      <textarea class="form-control" rows="3" placeholder="Select file and see here magnet link" id="magnet" readonly="readonly"></textarea>
+
+      <div class="footer">
+        <p>MIT &copy; <a href="https://github.com/lafin" rel="nofollow">lafin</a></p>
+      </div>
+
+    </div> <!-- /container -->
+
+    <script src="js/digest.js"></script>
+    <script src="js/encoding-indexes.js"></script>
+    <script src="js/encoding.js"></script>
+    <script src="js/bencode.js"></script>
+    <script src="js/main.js"></script>
+
+  </body>
 </html>
